flask-app-role/files/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: helloworld-service
  namespace: helloworld-ns

spec:
  selector:
    app: helloworld
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080
