flask-app-role/files/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: helloworld-ingress
  namespace: helloworld-ns


spec:
  ingressClassName: nginx
  rules:
    - host: app-maayan.octopus.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helloworld-service
                port:
                  number: 80
